@@ -7,6 +7,7 @@ import drinkshop.repository.Repository;
 import drinkshop.service.validator.InsufficientStockException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class StocService {
 
@@ -81,7 +82,7 @@ public class StocService {
     private void proceseazaScadereStoc(String ingredient, double necesar) {
         List<Stoc> ingredienteStoc = stocRepo.findAll().stream()
                 .filter(s -> s.getIngredient().equalsIgnoreCase(ingredient))
-                .toList();
+                .collect(Collectors.toList());
 
         double ramas = necesar;
 
